--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,376 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
+/* Use your CSS from RWD - I here.  IF you don't have CSS, use the solution CSS from RWD - I*/
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  font-family: "Titillium Web", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Bangers", cursive;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+/* UTILITIES */
+
+/* adds a bottom border for certain elements */
+.bottom-line {
+  padding-bottom: 50px;
+  border-bottom: 1px solid black;
+}
+
+/* adds a top space for certain elements */
+.top-space {
+  margin-top: 20px;
+}
+
+/* container to set width of page */
+.container {
+  width: 1024px;
+  margin: 0 auto;
+}
+
+/* TYPOGRAPHY */
+
+/* increase size h2 */
+h2.header-styles {
+  font-size: 1.3em;
+}
+
+/* increase size of paragraphs */
+section .half-column p,
+section .third-column p {
+  font-size: 1.1em;
+  line-height: 1.2;
+}
+
+address p {
+  font-size: 1.1em;
+}
+
+/* FLEX ROWS AND COLUMNS */
+
+.row {
+  width: 95%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.half-column {
+  flex: 0 1 49.7%;
+}
+
+.third-column {
+  flex: 0 1 32%;
+}
+
+/* NAVIGATION */
+
+nav.row {
+  margin: 32px auto;
+  /* height: 70px; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+nav a {
+  color: grey;
+  text-decoration: none;
+}
+
+/* HEADER */
+
+header.row {
+  text-align: center;
+  margin-top: 0px;
+}
+
+header .half-column {
+  margin: 5% 0 3%;
+}
+
+header .half-column h1 {
+  font-size: 4.8em;
+  line-height: 0.9;
+}
+
+header figure img {
+  width: 89%;
+}
+
+header .half-column button {
+  background-color: white;
+  font-size: 1em;
+  color: black;
+  border: 1px solid black;
+  padding: 10px 60px;
+  display: block;
+  margin: 3% auto;
+}
+
+/* FEATURES AND ABOUT */
+
+/* IMAGE BANNER */
+
+section.row,
+figure.row {
+  margin: 3% auto;
+}
+
+figure.row img {
+  width: 100%;
+}
+
+/* SERVICES PRODUCT AND VISION */
+/* section.bottom-line {
+  padding-bottom: 2%;
+} */
+
+/* CONTACT */
+
+address {
+  width: 95%;
+  margin: 1% auto;
+}
+
+/* FOOTER */
+
+footer {
+  text-align: center;
+  margin: 5% 0;
+}
+
+/* SERVICES PAGE: GETS NAV AND IMAGE BANNER FROM HOME PAGE */
+
+section.card-box div p,
+section.facts div p,
+section.services p {
+  line-height: 1.3;
+}
+
+/* SERVICES */
+
+section.services {
+  margin: 3% auto 1%;
+  width: 100%;
+}
+
+section.services h2 {
+  font-size: 2em;
+}
+
+/* CARDS SECTION */
+
+section.card-box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  margin: 0 auto;
+}
+
+section.card-box div {
+  padding: 3%;
+  border: 1px solid black;
+  flex: 0 1 100%;
+  margin-top: 2%;
+}
+
+section.card-box div h3,
+section.facts div h3 {
+  font-size: 1.5em;
+}
+
+section.card-box div button {
+  background: white;
+  border: 1px solid black;
+  display: block;
+  border-radius: 5px;
+  padding: 10px 40px;
+  margin: 3% 0 0;
+}
+
+/* FACTS SECTION */
+
+section.facts {
+  display: flex;
+  width: 100%;
+  margin: 3% auto 0;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+section.facts div,
+section.facts figure {
+  flex: 0 1 100%;
+}
+
+section.facts div ul {
+  list-style-type: disc;
+  list-style-position: inside;
+  margin: 3% 0 3%;
+}
+
+section.facts div ul li {
+  line-height: 2;
+}
+
+section.facts figure img {
+  margin: 0 auto;
+  width: 100%;
+  height: auto;
+}
