--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,8 @@ h5 {
   padding-bottom: 50px;
   border-bottom: 1px solid black;
 }
+@media (max-width: 800px) {
+}
 
 /* adds a top space for certain elements */
 .top-space {
@@ -176,8 +178,13 @@ h5 {
 
 /* container to set width of page */
 .container {
-  width: 1024px;
+  max-width: 1024px;
   margin: 0 auto;
+}
+@media (max-width: 800px) {
+  .container {
+    max-width: 800px;
+  }
 }
 
 /* TYPOGRAPHY */
@@ -185,6 +192,11 @@ h5 {
 /* increase size h2 */
 h2.header-styles {
   font-size: 1.3em;
+}
+
+header .half-column h1 {
+  font-size: 4.8em;
+  line-height: 0.9;
 }
 
 /* increase size of paragraphs */
@@ -201,11 +213,12 @@ address p {
 /* FLEX ROWS AND COLUMNS */
 
 .row {
-  width: 95%;
+  max-width: 95%;
   margin: auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .half-column {
@@ -220,7 +233,6 @@ address p {
 
 nav.row {
   margin: 32px auto;
-  /* height: 70px; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -232,24 +244,49 @@ nav a {
   text-decoration: none;
 }
 
+@media (max-width: 800px) {
+  nav figure {
+    order: -1;
+    width: 100%;
+    margin-bottom: 5%;
+  }
+  nav figure img {
+    display: block;
+    margin: 0 auto;
+  }
+}
+
 /* HEADER */
 
 header.row {
   text-align: center;
   margin-top: 0px;
 }
+@media (max-width: 800px) {
+  header.row {
+    justify-content: center;
+    max-height: 390px;
+  }
+}
 
 header .half-column {
   margin: 5% 0 3%;
 }
 
-header .half-column h1 {
-  font-size: 4.8em;
-  line-height: 0.9;
+@media (max-width: 800px) {
+  header .half-column {
+    flex: 0 1 100%;
+  }
 }
 
 header figure img {
   width: 89%;
+}
+
+@media (max-width: 800px) {
+  header figure img {
+    display: none;
+  }
 }
 
 header .half-column button {
@@ -260,6 +297,12 @@ header .half-column button {
   padding: 10px 60px;
   display: block;
   margin: 3% auto;
+}
+
+@media (max-width: 800px) {
+  header .half-column button {
+    padding: 7px 40px;
+  }
 }
 
 /* FEATURES AND ABOUT */
@@ -275,11 +318,6 @@ figure.row img {
   width: 100%;
 }
 
-/* SERVICES PRODUCT AND VISION */
-/* section.bottom-line {
-  padding-bottom: 2%;
-} */
-
 /* CONTACT */
 
 address {
@@ -292,85 +330,5 @@ address {
 footer {
   text-align: center;
   margin: 5% 0;
-}
-
-/* SERVICES PAGE: GETS NAV AND IMAGE BANNER FROM HOME PAGE */
-
-section.card-box div p,
-section.facts div p,
-section.services p {
-  line-height: 1.3;
-}
-
-/* SERVICES */
-
-section.services {
-  margin: 3% auto 1%;
-  width: 100%;
-}
-
-section.services h2 {
-  font-size: 2em;
-}
-
-/* CARDS SECTION */
-
-section.card-box {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 100%;
-  margin: 0 auto;
-}
-
-section.card-box div {
-  padding: 3%;
-  border: 1px solid black;
-  flex: 0 1 100%;
-  margin-top: 2%;
-}
-
-section.card-box div h3,
-section.facts div h3 {
-  font-size: 1.5em;
-}
-
-section.card-box div button {
-  background: white;
-  border: 1px solid black;
-  display: block;
-  border-radius: 5px;
-  padding: 10px 40px;
-  margin: 3% 0 0;
-}
-
-/* FACTS SECTION */
-
-section.facts {
-  display: flex;
-  width: 100%;
-  margin: 3% auto 0;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-section.facts div,
-section.facts figure {
-  flex: 0 1 100%;
-}
-
-section.facts div ul {
-  list-style-type: disc;
-  list-style-position: inside;
-  margin: 3% 0 3%;
-}
-
-section.facts div ul li {
-  line-height: 2;
-}
-
-section.facts figure img {
-  margin: 0 auto;
-  width: 100%;
-  height: auto;
+  width: 95%;
 }
